# focus-timer-rust

./: AGENTS.md  Cargo.toml  README.md  build.rs  focus-timer-rust-dioxus.plan.md  installer.iss
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
assets/: style.css
src/: events.rs  main.rs  state.rs  tray.rs  updater.rs
src/components/: mod.rs  resize_handles.rs  settings.rs  task_list.rs  timer_circle.rs  titlebar.rs
