[package]
name = "focus-timer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.5", features = ["desktop", "hooks"] }
dioxus-logger = "0.5"
muda = "0.17.1"
notify-rust = "4.11.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = { version = "0.34.5", features = ["rwh_05"] }
tauri-winrt-notification = "0.7.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tray-icon = "0.21.2"
