[package]
name = "focus-timer-rust"
version = "0.1.1"
edition = "2021"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.7.2"
winreg = "0.55.0"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.5", features = ["desktop", "hooks"] }
dioxus-logger = "0.5"
directories = "6.0.0"
muda = "0.17.1"
notify-rust = "4.11.7"
resvg = "0.45.1"
self_update = { version = "0.44.0", features = [
    "archive-zip",
    "compression-zip-deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = { version = "0.34.5", features = ["rwh_05"] }
tiny-skia = "0.11.4"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tray-icon = "0.21.2"
usvg = "0.45.1"

[build-dependencies]
embed-resource = "2.4"
image = { version = "0.24", default-features = false, features = [
    "ico",
    "png",
] }
resvg = "0.45.1"
tiny-skia = "0.11.4"
usvg = "0.45.1"
